finished change Avatar api
